--- a/src/app/second-hand/second-hand.component.html
+++ b/src/app/second-hand/second-hand.component.html
@@ -1,6 +1,7 @@
 
 <md-card>
   <md-card-title>
+    过滤
     <p *ngIf="totalPrice">共计价格 {{totalPrice}} 日元</p>
     <p *ngIf="totalCount"> 共计 {{totalCount}} 件</p>
   </md-card-title>
@@ -22,14 +23,20 @@
   <md-button-toggle-group name="paysfilter" [(ngModel)]="filterItem.paid">
     <md-button-toggle *ngFor="let pay of pays" [value]="pay.code">{{ pay.name }}</md-button-toggle>
   </md-button-toggle-group>
-  <button md-button (click)="filter()">过滤</button>
+  <md-card-actions>
+    <button md-button (click)="filter()">过滤+计算</button>
+  </md-card-actions>
 </md-card>
 
 <md-list>
   <md-list-item *ngFor="let key of filteredKeys">
-    <h4 md-line>{{secondHandItems.get(key).name}} | {{secondHandItems.get(key).user}} | {{secondHandItems.get(key).price}}</h4>
+    <h4 md-line>
+      {{secondHandItems.get(key).name}}
+      <span *ngIf="secondHandItems.get(key).user">| {{secondHandItems.get(key).user}}</span>
+      <span *ngIf="secondHandItems.get(key).price"> | {{secondHandItems.get(key).price}}</span>
+    </h4>
     <p md-line><a [href]="secondHandItems.get(key).link" target="_blank">{{secondHandItems.get(key).link}}</a></p>
-    <p md-line>{{getDelivered(key)}} | {{getPaid(key)}}</p>
+    <p md-line>{{getDelivered(key)}} <span *ngIf="getPaid(key)">| {{getPaid(key)}}</span></p>
     <a md-icon-button (click)="editItem(key)"><md-icon>edit</md-icon></a>
     <a md-icon-button (click)="deleteItem(key)"><md-icon>delete</md-icon></a>
   </md-list-item>
@@ -38,6 +45,7 @@
 <button md-button (click)="addItem()">添加一笔</button>
 
 <md-card>
+  <md-card-title>编辑</md-card-title>
   <md-input-container>
     <input mdInput [(ngModel)]="currentItem.name" placeholder="物品名称" (blur)="submit()"/>
   </md-input-container>
