--- a/src/app/second-hand/second-hand.component.html
+++ b/src/app/second-hand/second-hand.component.html
@@ -26,7 +26,7 @@
     </md-button-toggle-group>
   </md-card-content>
   <md-card-actions>
-    <button md-button (click)="filter()">过滤+计算</button>
+    <button md-raised-button (click)="filter()" color="primary">过滤+计算</button>
   </md-card-actions>
 </md-card>
 
@@ -40,12 +40,12 @@
     </h4>
     <p md-line><a [href]="secondHandItems.get(key).link" target="_blank">{{secondHandItems.get(key).link}}</a></p>
     <p md-line>{{getDelivered(key)}} <span *ngIf="getPaid(key)">| {{getPaid(key)}}</span></p>
-    <a md-icon-button (click)="editItem(key)"><md-icon>edit</md-icon></a>
-    <a md-icon-button (click)="deleteItem(key)"><md-icon>delete</md-icon></a>
+    <button md-mini-fab (click)="editItem(key)"><md-icon>edit</md-icon></button>
+    <button md-mini-fab (click)="deleteItem(key)"><md-icon>delete</md-icon></button>
   </md-list-item>
 </md-list>
 
-<button md-button (click)="addItem()">添加一笔</button>
+<button md-raised-button (click)="addItem()" color="primary">添加一笔</button>
 
 <md-card *ngIf="currentItem">
   <md-card-title>
@@ -55,19 +55,19 @@
     </a>
   </md-card-title>
   <md-input-container>
-    <input mdInput [(ngModel)]="currentItem.name" placeholder="物品名称" (blur)="submit()"/>
+    <input mdInput [(ngModel)]="currentItem.name" placeholder="物品名称" (blur)="submit()" required/>
   </md-input-container>
   <br>
   <md-input-container>
-    <input mdInput [(ngModel)]="currentItem.user" placeholder="用户昵称" (blur)="submit()"/>
+    <input mdInput [(ngModel)]="currentItem.user" placeholder="用户昵称" (blur)="submit()" required/>
   </md-input-container>
   <br>
   <md-input-container>
-    <input mdInput [(ngModel)]="currentItem.link" placeholder="链接" (blur)="submit()"/>
+    <input mdInput [(ngModel)]="currentItem.link" placeholder="链接" (blur)="submit()" required/>
   </md-input-container>
   <br>
   <md-input-container>
-    <input mdInput [(ngModel)]="currentItem.price" placeholder="价格" (blur)="submit()" type="number"/>
+    <input mdInput [(ngModel)]="currentItem.price" placeholder="价格" (blur)="submit()" type="number" required/>
   </md-input-container>
   <br>
   <md-button-toggle-group name="deliveries" [(ngModel)]="currentItem.delivered"  (blur)="submit()">
