--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,18 +1,17 @@
-
-<div *ngIf="currentUser">
-  {{currentUser.displayName}} ({{currentUser.email}})
-  <button md-raised-button (click)="signOut()">退出</button>
-</div>
-<div *ngIf="!currentUser">
-  <md-input-container>
-    <input mdInput [(ngModel)]="email" placeholder="电子邮件"/>
-  </md-input-container>
-  <md-input-container>
-    <input mdInput [(ngModel)]="password" placeholder="密码" type="password"/>
-  </md-input-container>
-
-  <button md-raised-button (click)="registerWithEmail()" color="primary">注册</button>
-  <button md-raised-button (click)="signInWithEmail()">登陆</button>
-  <button md-raised-button (click)="signInWithWeibo()">Weibo登陆</button>
-
+<div class="main">
+  <md-card class="center">
+    <div *ngIf="!currentUser">
+      <md-input-container>
+        <input mdInput [(ngModel)]="email" placeholder="电子邮件"/>
+      </md-input-container>
+      <br>
+      <md-input-container>
+        <input mdInput [(ngModel)]="password" placeholder="密码" type="password"/>
+      </md-input-container>
+      <br>
+      <button md-raised-button (click)="registerWithEmail()" color="primary">注册</button>
+      <button md-raised-button (click)="signInWithEmail()">登陆</button>
+      <span class="error" *ngIf="error">{{error}}</span>
+    </div>
+  </md-card>
 </div>
