--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,6 +4,8 @@
        *ngIf="currentUser.photoURL" class="avatar">
   {{ currentUser.displayName }}
   <span *ngIf="!currentUser.displayName">({{currentUser.email}}) </span>
+  <button md-icon-button routerLink="/profile"><md-icon >account_box</md-icon></button>
+  <button md-button routerLink="/second-hand">mer/ota</button>
   <span class="nav-spacer"></span>
   <button md-button (click)="signOut()">
     退出
