--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,6 +7,7 @@
   <button md-icon-button routerLink="/profile"><md-icon >account_box</md-icon></button>
   <button md-button routerLink="/second-hand">mer/ota</button>
   <button md-button routerLink="/groups">拼团</button>
+  <button md-button routerLink="/index">图鉴</button>
   <span class="nav-spacer"></span>
   <button md-button (click)="signOut()">
     退出
