--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -12,7 +12,7 @@
   <md-input-container>
     <input mdInput
       [(ngModel)]="photoURL"
-      placeholder="头像"
+      placeholder="头像图片地址链接 http开头"
       (blur)="updateProfile()" />
   </md-input-container>
 </md-card>
