--- a/src/app/user-picker/user-picker.component.html
+++ b/src/app/user-picker/user-picker.component.html
@@ -8,6 +8,7 @@
   <div *ngIf="selectedUser">
     <img [src]="selectedUser.photoURL"
          [alt]="selectedUser.displayName"
+         class="avatar"
          *ngIf="selectedUser.photoURL && displayAvatar" class="avatar">
     <div class="display-user">
       {{selectedUser.displayName}}
