--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,14 +6,13 @@
   <md-input-container>
     <input mdInput
       [(ngModel)]="displayName"
-      placeholder="昵称"
-      (blur)="updateProfile()" />
+      placeholder="昵称" />
   </md-input-container>
   <md-input-container>
     <input mdInput
       [(ngModel)]="photoURL"
-      placeholder="头像图片地址链接 http开头"
-      (blur)="updateProfile()" />
+      placeholder="头像图片地址链接 http开头" />
   </md-input-container>
+  <button md-raised-button color="primary" (click)="updateProfile()">提交</button>
 </md-card>
 </div>
