--- a/src/app/group-list/group-list.component.html
+++ b/src/app/group-list/group-list.component.html
@@ -1,26 +1,26 @@
 <div class="group-cards">
-<md-card class="group-card" *ngFor="let group of groups" routerLink="/group/{{group.key}}">
-  <img [src]="group.img" [alt]="group.name" *ngIf="group.img" md-card-image />
-  <md-card-title>
-    {{group.name}}
-  </md-card-title>
-  <md-card-content>
-    <app-user-picker [value]="group.owner" [editable]="false">
-    </app-user-picker>
-      <div>{{group.description}}</div>
-  </md-card-content>
-  <md-card-actions>
-    <a md-button
-       routerLink="/group/{{group.key}}"
-       *ngIf="group.owner !== currentUser">
-       查看
-     </a>
-    <a md-button routerLink="/group-edit/{{group.key}}"
-       *ngIf="group.owner === currentUser">
-       编辑
-     </a>
-  </md-card-actions>
-</md-card>
+  <md-card class="group-card" *ngFor="let group of groups" routerLink="/group/{{group.key}}">
+    <img [src]="group.img" [alt]="group.name" *ngIf="group.img" md-card-image />
+    <md-card-title>
+      {{group.name}}
+    </md-card-title>
+    <md-card-content>
+      <app-user-picker [value]="group.owner" [editable]="false">
+      </app-user-picker>
+        <div>{{group.description}}</div>
+    </md-card-content>
+    <md-card-actions>
+      <a md-button
+         routerLink="/group/{{group.key}}"
+         *ngIf="group.owner !== currentUser">
+         查看
+       </a>
+      <a md-button routerLink="/group-edit/{{group.key}}"
+         *ngIf="group.owner === currentUser">
+         编辑
+       </a>
+    </md-card-actions>
+  </md-card>
 </div>
 <a md-fab (click)="showCreateGroup = true" color="primary" class="create-group">
   <md-icon>add</md-icon>
@@ -29,20 +29,17 @@
   <img [src]="newGroupImg" *ngIf="newGroupImg" md-card-image/>
   <md-card-title>
     <md-input-container>
-      <input mdInput [(ngModel)]="newGroupKey" placeholder="链接名">
+      <input mdInput [(ngModel)]="newGroupName" placeholder="团名">
     </md-input-container>
   </md-card-title>
   <md-card-content>
-    <md-input-container>
-      <input mdInput [(ngModel)]="newGroupName" placeholder="团名">
-    </md-input-container>
     <md-input-container>
       <input mdInput [(ngModel)]="newGroupImg" placeholder="图片">
     </md-input-container>
   </md-card-content>
   <md-card-actions>
-    <a md-button (click)="addGroup()"
-       [disabled]="!newGroupKey || !newGroupName || !newGroupImg">
+    <a md-raised-button (click)="addGroup()" color="primary"
+       [disabled]="!newGroupName || !newGroupImg">
        添加
     </a>
   </md-card-actions>
