--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,6 +5,7 @@
   {{ currentUser.displayName }}
   <span *ngIf="!currentUser.displayName">({{currentUser.email}}) </span>
   <button md-icon-button routerLink="/profile"><md-icon >account_box</md-icon></button>
+  <button md-button routerLink="/bought" *ngIf="isAdmin">Mer/Ota</button>
   <button md-button routerLink="/groups">拼团</button>
   <button md-button routerLink="/index">图鉴</button>
   <span class="nav-spacer"></span>
