--- a/src/app/admin-manager/admin-manager.component.html
+++ b/src/app/admin-manager/admin-manager.component.html
@@ -12,3 +12,7 @@
     <button md-button color="warn" (click)="deletePeople(user)">踢出去</button>
   </md-list-item>
 </md-list>
+
+<md-input-container>
+  <textarea mdInput [ngModel]="authText"></textarea>
+</md-input-container>
