--- a/src/app/group-info-editor/group-info-editor.component.html
+++ b/src/app/group-info-editor/group-info-editor.component.html
@@ -1,7 +1,7 @@
 <md-card>
   <md-card-title>
     <md-input-container *ngIf="isOwner">
-      <input mdInput [(ngModel)]="collection.name" placeholder="名" (blur)="submit()"/>
+      <input mdInput [(ngModel)]="collection.name" placeholder="名"/>
     </md-input-container>
     <div *ngIf="!isOwner">
        {{collection.name}}
@@ -10,20 +10,24 @@
   <img [src]="collection.img" *ngIf="collection.img != ''" md-card-image/>
   <md-card-content *ngIf="isOwner">
     <md-input-container>
-      <textarea mdInput [(ngModel)]="collection.description" placeholder="详细" (blur)="submit()"></textarea>
+      <textarea mdInput [(ngModel)]="collection.description" placeholder="详细"></textarea>
     </md-input-container>
     <br>
     <md-input-container>
-      <input mdInput [(ngModel)]="collection.img" placeholder="图片地址" (blur)="submit()"/>
+      <input mdInput [(ngModel)]="collection.img" placeholder="图片地址"/>
     </md-input-container>
     <br>
     <md-input-container>
-      <input mdInput [(ngModel)]="collection.rate" placeholder="汇率" (blur)="submit()"/>
+      <input mdInput [(ngModel)]="collection.rate" placeholder="汇率"/>
     </md-input-container>
-    <md-checkbox [(ngModel)]="collection.open" (change)="submit()">开放</md-checkbox>
+    <md-checkbox [(ngModel)]="collection.open">开放</md-checkbox>
   </md-card-content>
   <md-card-content *ngIf="!isOwner">
     {{collection.description}}
     <p *ngIf="collection.rate">汇率 {{collection.rate}}</p>
   </md-card-content>
+  <md-card-actions *ngIf="isOwner">
+    <button md-raised-button (click)="submit()" color="primary">提交</button>
+    <button md-raised-button (click)="delete()" color="warn">删除</button>
+  </md-card-actions>
 </md-card>
