--- a/src/app/group-info-editor/group-info-editor.component.html
+++ b/src/app/group-info-editor/group-info-editor.component.html
@@ -7,15 +7,12 @@
        {{collection.name}}
     </div>
   </md-card-title>
-  <img [src]="collection.img" *ngIf="collection.img != ''" md-card-image/>
   <md-card-content *ngIf="isOwner">
     <md-input-container>
       <textarea mdInput [(ngModel)]="collection.description" placeholder="详细"></textarea>
     </md-input-container>
     <br>
-    <md-input-container>
-      <input mdInput [(ngModel)]="collection.img" placeholder="图片地址"/>
-    </md-input-container>
+    <app-image-picker [(image)]="collection.img"></app-image-picker>
     <br>
     <md-input-container>
       <input mdInput [(ngModel)]="collection.rate" placeholder="汇率"/>
@@ -29,5 +26,6 @@
   <md-card-actions *ngIf="isOwner">
     <button md-raised-button (click)="submit()" color="primary">提交</button>
     <button md-raised-button (click)="delete()" color="warn">删除</button>
+    <a md-raised-button routerLink="/group/{{key}}">完成</a>
   </md-card-actions>
 </md-card>
