--- a/src/app/image-picker/image-picker.component.html
+++ b/src/app/image-picker/image-picker.component.html
@@ -11,5 +11,5 @@
       (paste)="handleFilePaste($event)">
     将文件拖到此处
   </div>
-
+  <input type="file" (change)="handleFileInput($event)">
 </div>
