--- a/src/app/goods-index/goods-index.component.html
+++ b/src/app/goods-index/goods-index.component.html
@@ -37,9 +37,7 @@
     </md-input-container>
   </md-card-title>
   <md-card-content>
-    <md-input-container>
-      <input mdInput [(ngModel)]="editGoods.img" placeholder="图片" required>
-    </md-input-container>
+    <app-image-picker [(image)]="editGoods.img"></app-image-picker>
     <md-input-container>
       <textarea mdInput [(ngModel)]="editGoods.description" placeholder="描述"></textarea>
     </md-input-container>
