--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -9,6 +9,7 @@
     <button md-menu-item routerLink="/bought" *ngIf="isAdmin"> Mer/Ota </button>
     <button md-menu-item routerLink="/groups"> 拼团 </button>
     <button md-menu-item routerLink="/index"> 图鉴 </button>
+    <button md-menu-item routerLink="/blacklist"> 黑名单 </button>
   </md-menu>
 
   <button md-icon-button [mdMenuTriggerFor]="appMenu">
