--- a/src/app/black-list/black-list.component.html
+++ b/src/app/black-list/black-list.component.html
@@ -30,5 +30,5 @@
 
 <app-black-editor *ngIf="showCreateBlack"
                   [(editBlack)]="editBlack"
-                  (closeChange)="showCreateBlack = false">
+                  (closeChange)="closeEditor()">
 </app-black-editor>
